--- a/source/popup.html
+++ b/source/popup.html
@@ -15,7 +15,16 @@
 	<ul class="toolbar_nav">
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_setts" class="toolbar_nav_a toolbar_nav_a__marks" href="">
+				<a id="nav_okchanger" class="toolbar_nav_a">
+					<div class="toolbar_nav_i_ic nav_okchanger">
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off"></div>
+					</div>
+				</a>
+			</div>
+		</li>
+		<li class="toolbar_nav_i">
+			<div class="hookBlock">
+				<a id="nav_setts" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_setts">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Настройки</div>
 					</div>
@@ -24,7 +33,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_decor" class="toolbar_nav_a toolbar_nav_a__marks" href="">
+				<a id="nav_decor" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_decor">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Декор</div>
 					</div>
@@ -33,9 +42,18 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_styles" class="toolbar_nav_a toolbar_nav_a__marks" href="">
+				<a id="nav_styles" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_styles">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Стили</div>
+					</div>
+				</a>
+			</div>
+		</li>
+		<li class="toolbar_nav_i">
+			<div class="hookBlock">
+				<a id="nav_fonts" class="toolbar_nav_a" href="">
+					<div class="toolbar_nav_i_ic nav_font">
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Шрифт</div>
 					</div>
 				</a>
 			</div>
@@ -52,6 +70,7 @@
 			<div id="s_fullredirect"	class="progbutton">Перенаправление ссылок</div>
 			<div id="s_adblock"			class="progbutton">Блокировка рекламы</div>
 			<div id="s_minimize"		class="progbutton">Уменьшить страницу *</div>
+			<div id="s_autohidebar"		class="progbutton">Автоскрытие верхней панели</div>
 		</div>
 		<h3>Скрытие блоков</h3>
 		<div>
@@ -83,6 +102,7 @@
 			<div id="s_playerbutton"	class="progbutton">Скрыть кнопку плеера</div>
 			<div id="s_logotypemenu"	class="progbutton">Убрать меню на логотипе</div>
 			<div id="s_contentmenu"		class="progbutton">Убрать всплывающее меню</div>
+			
 		</div>
 		<h3>Прозрачность страницы</h3>
 		<div>
@@ -100,8 +120,17 @@
 	<!--div id="st_none" class="stylebutton" data-skip="skip" data-url="" data-id="0" title="Стандартный цвет"><div class="stylebg">Стандартный</div></div-->
 </div>
 
-<div id="photo_frames_block" style="display: none">
-	
+<div id="fonts_block" style="display: none">
+	<div id="ft_none" class="decbutton" data-font="-1" title=""><div class="decbg">Стандартный шрифт</div></div>
+	<div id="ft_verd" class="decbutton" data-font="Verdana" title=""><div class="decbg">Verdana</div></div>
+	<div id="ft_cour" class="decbutton" data-font="Courier New" title=""><div class="decbg">Courier New</div></div>
+	<div id="ft_sego" class="decbutton" data-font="Segoe UI" title=""><div class="decbg">Segoe UI</div></div>
+	<div id="ft_syst" class="decbutton" data-font="Segoe Print" title=""><div class="decbg">Segoe Print</div></div>
+	<div id="ft_syst" class="decbutton" data-font="Palatino Linotype" title=""><div class="decbg">Palatino Linotype</div></div>
+	<div id="ft_syst" class="decbutton" data-font="Monotype Corsiva" title=""><div class="decbg">Monotype Corsiva</div></div>
+	<div id="ft_cons" class="decbutton" data-font="Consolas" title=""><div class="decbg">Consolas</div></div>
+	<div id="ft_tims" class="decbutton" data-font="Times New Roman" title=""><div class="decbg">Times New Roman</div></div>
+	<div id="ft_taho" class="decbutton" data-font="Tahoma" title=""><div class="decbg">Tahoma</div></div>
 </div>
 
 </body>
