--- a/source/popup.html
+++ b/source/popup.html
@@ -26,7 +26,7 @@
 			<div class="hookBlock">
 				<a id="nav_setts" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_setts">
-						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Настройки</div>
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Settings">Настройки</div>
 					</div>
 				</a>
 			</div>
@@ -35,7 +35,7 @@
 			<div class="hookBlock">
 				<a id="nav_decor" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_decor">
-						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Декор</div>
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Decoration">Декор</div>
 					</div>
 				</a>
 			</div>
@@ -44,7 +44,7 @@
 			<div class="hookBlock">
 				<a id="nav_styles" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_styles">
-						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Стили</div>
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Style">Стили</div>
 					</div>
 				</a>
 			</div>
@@ -53,7 +53,7 @@
 			<div class="hookBlock">
 				<a id="nav_fonts" class="toolbar_nav_a" href="">
 					<div class="toolbar_nav_i_ic nav_font">
-						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off">Шрифт</div>
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Font">Шрифт</div>
 					</div>
 				</a>
 			</div>
@@ -63,48 +63,49 @@
 
 <div id="settings_block" style="display: none">
 	<div id="hidingblocks_accord">
-		<h3>Основные</h3>
+		<h3 data-lang="General">Основные</h3>
 		<div>
-			<div id="s_mailbar"			class="progbutton">Убрать панель Mail.Ru</div>
-			<div id="s_mailbutton"		class="progbutton">Убрать кнопку Mail.Ru</div>
-			<div id="s_fullredirect"	class="progbutton">Перенаправление ссылок</div>
-			<div id="s_adblock"			class="progbutton">Блокировка рекламы</div>
-			<div id="s_minimize"		class="progbutton">Уменьшить страницу *</div>
-			<div id="s_autohidebar"		class="progbutton">Автоскрытие верхней панели</div>
+			<div id="s_mailbar"			class="progbutton" data-lang="HidePanelMail">Убрать панель Mail.Ru</div>
+			<div id="s_mailbutton"		class="progbutton" data-lang="HideButtonMail">Убрать кнопку Mail.Ru</div>
+			<div id="s_fullredirect"	class="progbutton" data-lang="RedirectLinks">Перенаправление ссылок</div>
+			<div id="s_adblock"			class="progbutton" data-lang="AdBlock">Блокировка рекламы</div>
+			<div id="s_minimize"		class="progbutton" data-lang="ReducePage">Уменьшить страницу *</div>
+			<div id="s_autohidebar"		class="progbutton" data-lang="AutohideTopPanel">Автоскрытие верхней панели</div>
 		</div>
-		<h3>Скрытие блоков</h3>
+		<h3 data-lang="HideBlocks">Скрытие блоков</h3>
 		<div>
-			<div id="s_friendcommon"	class="progbutton">Что общего</div>
-			<div id="s_holydays"		class="progbutton">Праздники</div>
-			<div id="s_possible"		class="progbutton">Вы знакомы?</div>
-			<div id="s_abouts"			class="progbutton">О себе</div>
-			<div id="s_happenings"		class="progbutton">Мероприятия</div>
-			<div id="s_groups"			class="progbutton">Группы</div>
-			<div id="s_recommended"		class="progbutton">Рекомендуем</div>
-			<div id="s_games"			class="progbutton">Игры для вас</div>
-			<div id="s_bookmarks"		class="progbutton">Закладки</div>
-			<div id="s_friendonline"	class="progbutton">Вошел на сайт</div>
-			<div id="s_moderatorblock"	class="progbutton">Модератор Одноклассников</div>
-			<!--div id="s_adcustomblock"	class="progbutton">Блок различной рекламы</div-->
-			<div id="s_bubblenotif"		class="progbutton">Всплывающие оповещения</div>
-			<div id="s_expandmod"		class="progbutton">Скрыть все блоки</div>
+			<div id="s_friendcommon"	class="progbutton" data-lang="FriendsCommon">Что общего</div>
+			<div id="s_holydays"		class="progbutton" data-lang="Holidays">Праздники</div>
+			<div id="s_possible"		class="progbutton" data-lang="Familiar">Вы знакомы?</div>
+			<div id="s_abouts"			class="progbutton" data-lang="About">О себе</div>
+			<div id="s_happenings"		class="progbutton" data-lang="Events">Мероприятия</div>
+			<div id="s_workwith"		class="progbutton" data-lang="Worked">Работали вместе?</div>
+			<div id="s_groups"			class="progbutton" data-lang="Groups">Группы</div>
+			<div id="s_recommended"		class="progbutton" data-lang="Recommended">Рекомендуем</div>
+			<div id="s_games"			class="progbutton" data-lang="Games">Игры для вас</div>
+			<div id="s_bookmarks"		class="progbutton" data-lang="Favorites">Закладки</div>
+			<div id="s_friendonline"	class="progbutton" data-lang="FriendOnline">Вошел на сайт</div>
+			<div id="s_moderatorblock"	class="progbutton" data-lang="Moderator">Модератор Одноклассников</div>
+			<!--div id="s_adcustomblock"	class="progbutton" data-lang="">Блок различной рекламы</div-->
+			<div id="s_bubblenotif"		class="progbutton" data-lang="Popups">Всплывающие оповещения</div>
+			<div id="s_expandmod"		class="progbutton" data-lang="HideAllBlocks">Скрыть все блоки</div>
 		</div>
-		<h3>Дизайн сайта</h3>
+		<h3 data-lang="SiteDesign">Дизайн сайта</h3>
 		<div>
-			<div id="s_hidemarks"		class="progbutton">Убрать оценки над фотографиями</div>
-			<div id="s_hidepresents"	class="progbutton">Скрыть подарки</div>
-			<div id="s_hidecounters"	class="progbutton">Убрать счетчики оповещений</div>
-			<div id="s_hideonlinem"		class="progbutton">Выключить моргающий маркер онлайна</div>
-			<div id="s_buttonsize"		class="progbutton">Большая кнопка отправить *</div>
-			<div id="s_avatardown"		class="progbutton">Опустить аватарку *</div>
-			<div id="s_stylescircle"	class="progbutton">Стили кружками *</div>
-			<div id="s_shadows"			class="progbutton">Дополнительные тени</div>
-			<div id="s_playerbutton"	class="progbutton">Скрыть кнопку плеера</div>
-			<div id="s_logotypemenu"	class="progbutton">Убрать меню на логотипе</div>
-			<div id="s_contentmenu"		class="progbutton">Убрать всплывающее меню</div>
+			<div id="s_hidemarks"		class="progbutton" data-lang="HideMarksOverPhoto">Убрать оценки над фотографиями</div>
+			<div id="s_hidepresents"	class="progbutton" data-lang="HideGifts">Скрыть подарки</div>
+			<div id="s_hidecounters"	class="progbutton" data-lang="HideNotifCounters">Убрать счетчики оповещений</div>
+			<div id="s_hideonlinem"		class="progbutton" data-lang="HideOnlineMarker">Выключить моргающий маркер онлайна</div>
+			<div id="s_buttonsize"		class="progbutton" data-lang="BigSendButton">Большая кнопка отправить *</div>
+			<div id="s_avatardown"		class="progbutton" data-lang="AvatarDown">Опустить аватарку *</div>
+			<div id="s_stylescircle"	class="progbutton" data-lang="CircledTextStyles">Стили кружками *</div>
+			<div id="s_shadows"			class="progbutton" data-lang="AdvShadows">Дополнительные тени</div>
+			<div id="s_playerbutton"	class="progbutton" data-lang="HidePlayerButton">Скрыть кнопку плеера</div>
+			<div id="s_logotypemenu"	class="progbutton" data-lang="HideLogotypeMenu">Убрать меню на логотипе</div>
+			<div id="s_contentmenu"		class="progbutton" data-lang="HidePopupMenu">Убрать всплывающее меню</div>
 			
 		</div>
-		<h3>Прозрачность страницы</h3>
+		<h3 data-lang="PageOpacity">Прозрачность страницы</h3>
 		<div>
 			<div id="l_pagetransp"></div>
 		</div>
@@ -112,8 +113,8 @@
 </div>
 
 <div id="decor_block" style="display: none">
-	<div id="dc_none" class="decbutton" data-skip="skip" data-url="empty" data-id="-1" title="Пустая тема"><div class="decbg">Нет темы</div></div>
-	<div id="dc_default" class="decbutton" data-skip="skip" data-url="orig" data-id="0" ><div class="decbg">Оригинальная Одноклассники.Ru</div></div>
+	<div id="dc_none" class="decbutton" data-skip="skip" data-url="empty" data-id="-1" title="Пустая тема"><div class="decbg" data-lang="ClearDecor">Нет темы</div></div>
+	<div id="dc_default" class="decbutton" data-skip="skip" data-url="orig" data-id="0" ><div class="decbg" data-lang="OriginalDecor">Оригинальная Одноклассники.Ru</div></div>
 </div>
 
 <div id="styles_block" style="display: none">
@@ -121,16 +122,21 @@
 </div>
 
 <div id="fonts_block" style="display: none">
-	<div id="ft_none" class="decbutton" data-font="-1" title=""><div class="decbg">Стандартный шрифт</div></div>
-	<div id="ft_verd" class="decbutton" data-font="Verdana" title=""><div class="decbg">Verdana</div></div>
-	<div id="ft_cour" class="decbutton" data-font="Courier New" title=""><div class="decbg">Courier New</div></div>
-	<div id="ft_sego" class="decbutton" data-font="Segoe UI" title=""><div class="decbg">Segoe UI</div></div>
-	<div id="ft_syst" class="decbutton" data-font="Segoe Print" title=""><div class="decbg">Segoe Print</div></div>
-	<div id="ft_syst" class="decbutton" data-font="Palatino Linotype" title=""><div class="decbg">Palatino Linotype</div></div>
-	<div id="ft_syst" class="decbutton" data-font="Monotype Corsiva" title=""><div class="decbg">Monotype Corsiva</div></div>
-	<div id="ft_cons" class="decbutton" data-font="Consolas" title=""><div class="decbg">Consolas</div></div>
-	<div id="ft_tims" class="decbutton" data-font="Times New Roman" title=""><div class="decbg">Times New Roman</div></div>
-	<div id="ft_taho" class="decbutton" data-font="Tahoma" title=""><div class="decbg">Tahoma</div></div>
+	<div id="ft_none" class="decbutton" data-font="-1" title="" data-google=""><div class="decbg" data-lang="StandartFont">Стандартный шрифт</div></div>
+	<div id="ft_ubun" class="decbutton" data-font="Ubuntu" title="" data-google="http://fonts.googleapis.com/css?family=Ubuntu&subset=latin,cyrillic-ext,cyrillic">					<div class="decbg">Ubuntu</div></div>
+	<div id="ft_rusl" class="decbutton" data-font="Ruslan Display" title="" data-google="http://fonts.googleapis.com/css?family=Ruslan+Display&subset=latin,cyrillic-ext,cyrillic">	<div class="decbg">Ruslan Display</div></div>
+	<div id="ft_lobs" class="decbutton" data-font="Lobster" title="" data-google="http://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic-ext,cyrillic">				<div class="decbg">Lobster</div></div>
+	<div id="ft_ruso" class="decbutton" data-font="Russo One" title="" data-google="http://fonts.googleapis.com/css?family=Russo+One&subset=latin,cyrillic-ext,cyrillic">			<div class="decbg">Russo One</div></div>
+	<div id="ft_pros" class="decbutton" data-font="Prosto One" title="" data-google="http://fonts.googleapis.com/css?family=Prosto+One&subset=latin,cyrillic-ext,cyrillic">			<div class="decbg">Prosto One</div></div>
+	<div id="ft_verd" class="decbutton" data-font="Verdana" title="" data-google=""><div class="decbg">Verdana</div></div>
+	<div id="ft_cour" class="decbutton" data-font="Courier New" title="" data-google=""><div class="decbg">Courier New</div></div>
+	<div id="ft_sego" class="decbutton" data-font="Segoe UI" title="" data-google=""><div class="decbg">Segoe UI</div></div>
+	<div id="ft_syst" class="decbutton" data-font="Segoe Print" title="" data-google=""><div class="decbg">Segoe Print</div></div>
+	<div id="ft_pala" class="decbutton" data-font="Palatino Linotype" title="" data-google=""><div class="decbg">Palatino Linotype</div></div>
+	<div id="ft_monc" class="decbutton" data-font="Monotype Corsiva" title="" data-google=""><div class="decbg">Monotype Corsiva</div></div>
+	<div id="ft_cons" class="decbutton" data-font="Consolas" title="" data-google=""><div class="decbg">Consolas</div></div>
+	<div id="ft_tims" class="decbutton" data-font="Times New Roman" title="" data-google=""><div class="decbg">Times New Roman</div></div>
+	<div id="ft_taho" class="decbutton" data-font="Tahoma" title="" data-google=""><div class="decbg">Tahoma</div></div>
 </div>
 
 </body>
