--- a/source/popup.html
+++ b/source/popup.html
@@ -58,6 +58,15 @@
 				</a>
 			</div>
 		</li>
+		<li class="toolbar_nav_i">
+			<div class="hookBlock">
+				<a id="nav_cursor" class="toolbar_nav_a" href="">
+					<div class="toolbar_nav_i_ic nav_cursor">
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Cursor">Курсор</div>
+					</div>
+				</a>
+			</div>
+		</li>
 	</ul>
 </div>
 
@@ -83,6 +92,7 @@
 			<div id="s_groups"			class="progbutton" data-lang="Groups">Группы</div>
 			<div id="s_recommended"		class="progbutton" data-lang="Recommended">Рекомендуем</div>
 			<div id="s_games"			class="progbutton" data-lang="Games">Игры для вас</div>
+			<div id="s_music4u"			class="progbutton" data-lang="Music4u">Музыка для вас</div>
 			<div id="s_bookmarks"		class="progbutton" data-lang="Favorites">Закладки</div>
 			<div id="s_friendonline"	class="progbutton" data-lang="FriendOnline">Вошел на сайт</div>
 			<div id="s_moderatorblock"	class="progbutton" data-lang="Moderator">Модератор Одноклассников</div>
@@ -137,6 +147,10 @@
 	<div id="ft_cons" class="decbutton" data-font="Consolas" title="" data-google=""><div class="decbg">Consolas</div></div>
 	<div id="ft_tims" class="decbutton" data-font="Times New Roman" title="" data-google=""><div class="decbg">Times New Roman</div></div>
 	<div id="ft_taho" class="decbutton" data-font="Tahoma" title="" data-google=""><div class="decbg">Tahoma</div></div>
+</div>
+
+<div id="cursor_block" style="display: none">
+	<!--div id="st_none" class="stylebutton" data-skip="skip" data-url="" data-id="0" title="Стандартный цвет"><div class="stylebg">Стандартный</div></div-->
 </div>
 
 </body>
