--- a/source/popup.html
+++ b/source/popup.html
@@ -60,9 +60,9 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_cursor" class="toolbar_nav_a" href="">
-					<div class="toolbar_nav_i_ic nav_cursor">
-						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Cursor">Курсор</div>
+				<a id="nav_mods" class="toolbar_nav_a" href="">
+					<div class="toolbar_nav_i_ic nav_mods">
+						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Mod">Моды</div>
 					</div>
 				</a>
 			</div>
@@ -149,8 +149,8 @@
 	<div id="ft_taho" class="decbutton" data-font="Tahoma" title="" data-google=""><div class="decbg">Tahoma</div></div>
 </div>
 
-<div id="cursor_block" style="display: none">
-	<!--div id="st_none" class="stylebutton" data-skip="skip" data-url="" data-id="0" title="Стандартный цвет"><div class="stylebg">Стандартный</div></div-->
+<div id="mods_block" style="display: none">
+	
 </div>
 
 </body>
