--- a/source/popup.html
+++ b/source/popup.html
@@ -115,7 +115,84 @@
 		<div>
 			<div id="l_pagetransp"></div>
 		</div>
-	</div>
+		<h3 data-lang="PageColor">Цвет страницы</h3>
+		<div id="pagecolor_selector">
+			<!-- <div class="colorb" style="background: rgb(255,200,200)"></div> -->
+			<div class="colorb" style="background: rgb(255,255,255)"></div>
+			<div class="colorb" style="background: rgb(219,219,219)"></div>
+			<div class="colorb" style="background: rgb(183,183,183)"></div>
+			<div class="colorb" style="background: rgb(147,147,147)"></div>
+			<div class="colorb" style="background: rgb(111,111,111)"></div>
+			<div class="colorb" style="background: rgb(75,75,75)"></div>
+			<div class="colorb" style="background: rgb(39,39,39)"></div>
+			<div class="colorb" style="background: rgb(3,3,3)"></div>
+			<div class="colorb" style="background: rgb(255,235,235)"></div>
+			<div class="colorb" style="background: rgb(255,205,205)"></div>
+			<div class="colorb" style="background: rgb(255,175,175)"></div>
+			<div class="colorb" style="background: rgb(255,145,145)"></div>
+			<div class="colorb" style="background: rgb(255,115,115)"></div>
+			<div class="colorb" style="background: rgb(255,85,85)"></div>
+			<div class="colorb" style="background: rgb(255,55,55)"></div>
+			<div class="colorb" style="background: rgb(255,25,25)"></div>
+			<div class="colorb" style="background: rgb(235,255,235)"></div>
+			<div class="colorb" style="background: rgb(205,255,205)"></div>
+			<div class="colorb" style="background: rgb(175,255,175)"></div>
+			<div class="colorb" style="background: rgb(145,255,145)"></div>
+			<div class="colorb" style="background: rgb(115,255,115)"></div>
+			<div class="colorb" style="background: rgb(85,255,85)"></div>
+			<div class="colorb" style="background: rgb(55,255,55)"></div>
+			<div class="colorb" style="background: rgb(25,255,25)"></div>
+			<div class="colorb" style="background: rgb(235,235,255)"></div>
+			<div class="colorb" style="background: rgb(205,205,255)"></div>
+			<div class="colorb" style="background: rgb(175,175,255)"></div>
+			<div class="colorb" style="background: rgb(145,145,255)"></div>
+			<div class="colorb" style="background: rgb(115,115,255)"></div>
+			<div class="colorb" style="background: rgb(85,85,255)"></div>
+			<div class="colorb" style="background: rgb(55,55,255)"></div>
+			<div class="colorb" style="background: rgb(25,25,255)"></div>
+			<div class="colorb" style="background: rgb(235,20,255)"></div>
+			<div class="colorb" style="background: rgb(205,50,255)"></div>
+			<div class="colorb" style="background: rgb(175,80,255)"></div>
+			<div class="colorb" style="background: rgb(145,110,255)"></div>
+			<div class="colorb" style="background: rgb(115,140,255)"></div>
+			<div class="colorb" style="background: rgb(85,170,255)"></div>
+			<div class="colorb" style="background: rgb(55,200,255)"></div>
+			<div class="colorb" style="background: rgb(25,230,255)"></div>
+			<div class="colorb" style="background: rgb(20,255,235)"></div>
+			<div class="colorb" style="background: rgb(50,255,205)"></div>
+			<div class="colorb" style="background: rgb(80,255,175)"></div>
+			<div class="colorb" style="background: rgb(110,255,145)"></div>
+			<div class="colorb" style="background: rgb(140,255,115)"></div>
+			<div class="colorb" style="background: rgb(170,255,85)"></div>
+			<div class="colorb" style="background: rgb(200,255,55)"></div>
+			<div class="colorb" style="background: rgb(230,255,25)"></div>
+			<div class="colorb" style="background: rgb(255,20,235)"></div>
+			<div class="colorb" style="background: rgb(255,50,205)"></div>
+			<div class="colorb" style="background: rgb(255,80,175)"></div>
+			<div class="colorb" style="background: rgb(255,110,145)"></div>
+			<div class="colorb" style="background: rgb(255,140,115)"></div>
+			<div class="colorb" style="background: rgb(255,170,85)"></div>
+			<div class="colorb" style="background: rgb(255,200,55)"></div>
+			<div class="colorb" style="background: rgb(255,230,25)"></div>
+			<div class="colorb" style="background: rgb(235,20,235)"></div>
+			<div class="colorb" style="background: rgb(205,50,205)"></div>
+			<div class="colorb" style="background: rgb(175,80,175)"></div>
+			<div class="colorb" style="background: rgb(145,110,145)"></div>
+			<div class="colorb" style="background: rgb(115,140,115)"></div>
+			<div class="colorb" style="background: rgb(85,170,85)"></div>
+			<div class="colorb" style="background: rgb(55,200,55)"></div>
+			<div class="colorb" style="background: rgb(25,230,25)"></div>
+			<div class="colorb" style="background: rgb(235,235,20)"></div>
+			<div class="colorb" style="background: rgb(205,205,50)"></div>
+			<div class="colorb" style="background: rgb(175,175,80)"></div>
+			<div class="colorb" style="background: rgb(145,145,110)"></div>
+			<div class="colorb" style="background: rgb(115,115,140)"></div>
+			<div class="colorb" style="background: rgb(85,85,170)"></div>
+			<div class="colorb" style="background: rgb(55,55,200)"></div>
+			<div class="colorb" style="background: rgb(25,25,230)"></div>
+		</div> <!-- #pagecolor_selector -->
+		
+	</div> <!-- #hidingblocks_accord -->
 </div>
 
 <div id="decor_block" style="display: none">
