--- a/source/popup.html
+++ b/source/popup.html
@@ -89,8 +89,8 @@
 			<div id="s_abouts"			class="progbutton" data-lang="About">О себе</div>
 			<div id="s_happenings"		class="progbutton" data-lang="Events">Мероприятия</div>
 			<div id="s_workwith"		class="progbutton" data-lang="Worked">Работали вместе?</div>
-			<div id="s_groups"			class="progbutton" data-lang="Groups">Группы</div>
-			<div id="s_recommended"		class="progbutton" data-lang="Recommended">Рекомендуем</div>
+			<div id="s_groups"			class="progbutton" data-lang="Groups">Рекомендуем</div>
+			<div id="s_recommended"		class="progbutton" data-lang="Recommended">Группы</div>
 			<div id="s_games"			class="progbutton" data-lang="Games">Игры для вас</div>
 			<div id="s_music4u"			class="progbutton" data-lang="Music4u">Музыка для вас</div>
 			<div id="s_bookmarks"		class="progbutton" data-lang="Favorites">Закладки</div>
