Fixed avatardown and topbar hiding

--- a/source/popup.html
+++ b/source/popup.html
@@ -75,10 +75,10 @@
 		<h3 data-lang="General">Основные</h3>
 		<div>
 			<div id="s_mailbar"			class="progbutton" data-lang="HidePanelMail">Убрать панель Mail.Ru</div>
-			<div id="s_mailbutton"		class="progbutton" data-lang="HideButtonMail">Убрать кнопку Mail.Ru</div>
+			<!--div id="s_mailbutton"		class="progbutton" data-lang="HideButtonMail">Убрать кнопку Mail.Ru</div-->
 			<div id="s_fullredirect"	class="progbutton" data-lang="RedirectLinks">Перенаправление ссылок</div>
 			<div id="s_adblock"			class="progbutton" data-lang="AdBlock">Блокировка рекламы</div>
-			<div id="s_minimize"		class="progbutton" data-lang="ReducePage">Уменьшить страницу *</div>
+			<!--div id="s_minimize"		class="progbutton" data-lang="ReducePage">Уменьшить страницу *</div-->
 			<div id="s_autohidebar"		class="progbutton" data-lang="AutohideTopPanel">Автоскрытие верхней панели</div>
 		</div>
 		<h3 data-lang="HideBlocks">Скрытие блоков</h3>
