Fixed page color

--- a/source/popup.html
+++ b/source/popup.html
@@ -106,9 +106,8 @@
 			<div id="s_hidecounters"	class="progbutton" data-lang="HideNotifCounters">Убрать счетчики оповещений</div>
 			<div id="s_hideonlinem"		class="progbutton" data-lang="HideOnlineMarker">Выключить моргающий маркер онлайна</div>
 			<div id="s_avatardown"		class="progbutton" data-lang="AvatarDown">Опустить аватарку *</div>
-			<div id="s_shadows"			class="progbutton" data-lang="AdvShadows">Дополнительные тени</div>
+			<!--div id="s_shadows"			class="progbutton" data-lang="AdvShadows">Дополнительные тени</div-->
 			<div id="s_playerbutton"	class="progbutton" data-lang="HidePlayerButton">Скрыть кнопку плеера</div>
-			<div id="s_contentmenu"		class="progbutton" data-lang="HidePopupMenu">Убрать всплывающее меню</div>
 			
 		</div>
 		<h3 data-lang="PageOpacity">Прозрачность страницы</h3>
