Fix blocks. hiding

--- a/source/popup.html
+++ b/source/popup.html
@@ -90,14 +90,14 @@
 			<div id="s_happenings"		class="progbutton" data-lang="Events">Мероприятия</div>
 			<div id="s_workwith"		class="progbutton" data-lang="Worked">Работали вместе?</div>
 			<div id="s_groups"			class="progbutton" data-lang="Groups">Группы</div>
-			<div id="s_recommended"		class="progbutton" data-lang="Recommended">Рекомендуем</div>
+			<!--div id="s_recommended"		class="progbutton" data-lang="Recommended">Рекомендуем</div-->
 			<div id="s_games"			class="progbutton" data-lang="Games">Игры для вас</div>
 			<div id="s_music4u"			class="progbutton" data-lang="Music4u">Музыка для вас</div>
 			<div id="s_bookmarks"		class="progbutton" data-lang="Favorites">Закладки</div>
 			<div id="s_friendonline"	class="progbutton" data-lang="FriendOnline">Вошел на сайт</div>
 			<div id="s_moderatorblock"	class="progbutton" data-lang="Moderator">Модератор Одноклассников</div>
 			<div id="s_bubblenotif"		class="progbutton" data-lang="Popups">Всплывающие оповещения</div>
-			<div id="s_expandmod"		class="progbutton" data-lang="HideAllBlocks">Скрыть все блоки</div>
+			<!--div id="s_expandmod"		class="progbutton" data-lang="HideAllBlocks">Скрыть все блоки</div-->
 		</div>
 		<h3 data-lang="SiteDesign">Дизайн сайта</h3>
 		<div>
