Fixed issue 11: Themes categories not switch

--- a/source/popup.html
+++ b/source/popup.html
@@ -101,7 +101,7 @@
 		</div>
 		<h3 data-lang="SiteDesign">Дизайн сайта</h3>
 		<div>
-			<div id="s_oldmessages"		class="progbutton new" data-lang="OldMessages">Старый вид сообщений</div>
+			<!--div id="s_oldmessages"		class="progbutton new" data-lang="OldMessages">Старый вид сообщений</div-->
 			<div id="s_hidemarks"		class="progbutton" data-lang="HideMarksOverPhoto">Убрать оценки над фотографиями</div>
 			<div id="s_hidepresents"	class="progbutton" data-lang="HideGifts">Скрыть подарки</div>
 			<div id="s_hidecounters"	class="progbutton" data-lang="HideNotifCounters">Убрать счетчики оповещений</div>
