Update manifest for right access rights. Update indent in popup. New tab click events in popup.

--- a/source/popup.html
+++ b/source/popup.html
@@ -24,7 +24,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_setts" class="toolbar_nav_a" href="">
+				<a id="nav_setts" class="toolbar_nav_a toolbar_button" href="setts">
 					<div class="toolbar_nav_i_ic nav_setts">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Settings">Настройки</div>
 					</div>
@@ -33,7 +33,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_decor" class="toolbar_nav_a" href="">
+				<a id="nav_decor" class="toolbar_nav_a toolbar_button" href="decor">
 					<div class="toolbar_nav_i_ic nav_decor">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Decoration">Декор</div>
 					</div>
@@ -42,7 +42,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_styles" class="toolbar_nav_a" href="">
+				<a id="nav_styles" class="toolbar_nav_a toolbar_button" href="styles">
 					<div class="toolbar_nav_i_ic nav_styles">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Style">Стили</div>
 					</div>
@@ -51,7 +51,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_fonts" class="toolbar_nav_a" href="">
+				<a id="nav_fonts" class="toolbar_nav_a toolbar_button" href="fonts">
 					<div class="toolbar_nav_i_ic nav_font">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Font">Шрифт</div>
 					</div>
@@ -60,7 +60,7 @@
 		</li>
 		<li class="toolbar_nav_i">
 			<div class="hookBlock">
-				<a id="nav_mods" class="toolbar_nav_a" href="">
+				<a id="nav_mods" class="toolbar_nav_a toolbar_button" href="mods">
 					<div class="toolbar_nav_i_ic nav_mods">
 						<div unselectable="on" class="toolbar_nav_i_tx-w usel-off" data-lang="Mod">Моды</div>
 					</div>
